Fixing glaring color contrast

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -35,7 +35,7 @@ body{
 
 
 .Main{
-    background:purple;
+    background:rgb(0, 170, 71);
     grid-column:1/3;
     grid-row:2/3;
     font-size: 24px;
@@ -44,7 +44,7 @@ body{
 
 
 .Side{
-    background:red;
+    background:rgb(96, 138, 99);
     grid-column:3/4;
     grid-row:2/3;
     font-size: 16px;
@@ -53,7 +53,7 @@ body{
 }
 
 .Footer{
-    background:blue;
+    background: lightgreen;
     grid-column: 1/4;
     grid-row:3/4;
     text-indent: 5%;
